--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "@ionic/core": "^5.4.1",
     "babel-plugin-styled-components": "^2.0.7",
+    "big.js": "^6.2.1",
     "ionicons": "^5.2.3",
+    "js-big-decimal": "^1.3.10",
+    "jstat": "^1.9.5",
     "next": "latest",
     "next-pwa": "^5.2.21",
+    "probability-distributions": "^0.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "statistics.js": "^1.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
