icon and calculate P in binomial

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "background_color": "#66CFD5",
     "display": "standalone",
     "start_url": ".",
-    "name": "Boilerplate",
-    "short_name": "Boilerplate",
+    "name": "Estadis",
+    "short_name": "Estadis",
     "icons": [
         {
           "src": "rounded.png",
