--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "probability-distributions": "^0.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "statistics.js": "^1.0.0",
     "styled-components": "^5.3.5"
   },
